Thu Aug  7 16:39:14 2003  Dale Wilson  <wilson_d@ociweb.com>
        ***Move oci_haft change log entries from $ACE_ROOT/ChangeLog to here

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
        * orbsvcs/Fault_Detector/Fault_Detector_Main.cpp:
        Make dependancy on NameService optional.

        * orbsvcs/orbsvcs/PortableGroup.idl:
          fix include so PortableGroup can be included from outside orbsvcs directory.

        * tests/FT_App/FT_Client.cpp:
        * tests/FT_App/FT_Replica.cpp:
        * tests/FT_App/FT_TestReplica.idl:
        * tests/FT_App/FT_TestReplica_i.h:
        * tests/FT_App/FT_TestReplica_i.cpp:
        * tests/FT_App/run_test_notifier.pl:
        * tests/FT_App/testscript:
        Make fault points generic rather than method specific.
        Add "before replication" fault point.

        These changes were made in the oci_haft branch.

Wed Aug 06 14:40:00 2003  Curt Hibbs <hibbs_c@ociweb.com>

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h
        * orbsvcs/orbsvcs/FT_CORBA.idl
        * orbsvcs/orbsvcs/FT_FaultDetectorFactory.idl

          Completed the conditional use of PortableGroups in FT_CORBA.idl
          that was begun by Dale Wilson. The typedef trick used by Dale
          to allow PortableGroup symbols to be used in the FT namespace
          does not work for exceptions, so I also had to modify the
          existing code to use "PortableGroup::" scoping on exceptions.

        These changes were made in the oci_haft branch.

Thu Jul 31 14:36:01 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.h:
        * orbsvcs/Fault_Detector/FT_FaultDetectorFactory_i.cpp:
        * orbsvcs/Fault_Detector/Fault_Detector_Main.cpp:
        * orbsvcs/Fault_Detector/Fault_Detector_i.h: